Remove bogus security manager profile from the test suite
The security manager should be installed by the security-manager subsystem,
not by a command line property.